--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,8 @@
         <activity
             android:name=".About"
             android:theme="@style/AppTheme.NoActionBars" />
-        <activity android:name=".AddDemand"></activity>
+        <activity android:name=".AddDemand" />
+        <activity android:name=".NewDemand"></activity>
     </application>
 
 </manifest>
