--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,12 +57,12 @@
         <activity
             android:name=".About"
             android:theme="@style/AppTheme.NoActionBars" />
-        <activity android:name=".AddDemand" />
+
         <activity android:name=".NewDemand" />
         <activity android:name=".Track" />
         <activity android:name=".Timeline" />
         <activity android:name=".View" />
-        <activity android:name=".Resource"></activity>
+        <activity android:name=".Resources"></activity>
     </application>
 
 </manifest>
