--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,10 +57,33 @@
             android:name=".About"
             android:theme="@style/AppTheme.NoActionBars" />
         <activity android:name=".NewDemand" />
-        <activity android:name=".Track" />
-        <activity android:name=".Timeline" />
+        <activity android:name=".Track">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.jaya.hackthaonproject.Admin" />
+        </activity>
+        <activity android:name=".Timeline">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.jaya.hackthaonproject.Admin" />
+        </activity>
         <activity android:name=".View" />
-        <activity android:name=".Multiple"></activity>
+        <activity android:name=".Multiple" />
+        <activity android:name=".ViewDemands">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.jaya.hackthaonproject.Admin" />
+        </activity>
+        <activity android:name=".Allocated">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.jaya.hackthaonproject.Register" />
+        </activity>
+        <activity android:name=".Available">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.jaya.hackthaonproject.Admin" />
+        </activity>
     </application>
 
 </manifest>
