--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,8 +85,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.jaya.hackthaonproject.Admin" />
         </activity>
-        <activity android:name=".ShowUserDemand" />
-        <activity android:name=".Granted"></activity>
+        <activity android:name=".ShowUserDemand"></activity>
     </application>
 
 </manifest>
