--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.synnapps:carouselview:0.0.10'
+    compile 'com.google.firebase:firebase-messaging:9.6.1'
+    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
+    compile 'com.android.support.test.espresso:espresso-core:2.2.2'
     testCompile 'junit:junit:4.12'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
