--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/wangle"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -33,10 +33,10 @@
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Admin"
+            android:name=".PC"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".User"
+            android:name=".SM"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Features"
@@ -51,7 +51,7 @@
         </activity>
         <activity android:name=".failure" />
         <activity
-            android:name=".show"
+            android:name=".ShowSM"
             android:theme="@style/AppTheme.NoActionBars" />
         <activity android:name=".Demand" />
         <activity
@@ -61,18 +61,18 @@
         <activity android:name=".Track">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.jaya.hackthaonproject.Admin" />
+                android:value="com.jaya.hackthaonproject.PC" />
         </activity>
         <activity android:name=".Timeline">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.jaya.hackthaonproject.Admin" />
+                android:value="com.jaya.hackthaonproject.PC" />
         </activity>
         <activity android:name=".View" />
         <activity android:name=".ViewDemands">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.jaya.hackthaonproject.Admin" />
+                android:value="com.jaya.hackthaonproject.PC" />
         </activity>
         <activity android:name=".Allocated">
             <meta-data
@@ -82,25 +82,25 @@
         <activity android:name=".Available">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.jaya.hackthaonproject.Admin" />
+                android:value="com.jaya.hackthaonproject.PC" />
         </activity>
-        <activity android:name=".ShowUserDemand">
+        <activity android:name=".ShowDemand">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.jaya.hackthaonproject.Admin" />
+                android:value="com.jaya.hackthaonproject.PC" />
         </activity>
         <activity android:name=".Granted">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.jaya.hackthaonproject.Admin" />
+                android:value="com.jaya.hackthaonproject.PC" />
         </activity>
         <activity android:name=".Free">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.jaya.hackthaonproject.Admin" />
+                android:value="com.jaya.hackthaonproject.PC" />
         </activity>
-        <activity android:name=".Manua" />
-        <activity android:name=".Prempt" />
+        <activity android:name=".Manual" />
+        <activity android:name=".Preempt" />
         <activity android:name=".NotRamu"></activity>
         <service android:name=".FCMService">
             <intent-filter>
