--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:9.6.1'
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    compile 'com.android.volley:volley:1.0.0'
 
-    compile 'com.mcxiaoke.volley:library:1.0.19'
     testCompile 'junit:junit:4.12'
 }
 
