--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.code.gson:gson:2.4'
 
     testCompile 'junit:junit:4.12'
 }
